kubernetes-config/hostel-microservice.yaml
---
# Hostel Microservice Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostel-microservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hostel-microservice-deployment
  template:
    metadata:
      labels:
        app: hostel-microservice-deployment
    spec:
      containers:
        - name: hostel-microservice-container
          image: enum3rat3/hostel-service
          ports:
            - containerPort: 5001
---
# Hostel Microservice Service
apiVersion: v1
kind: Service
metadata:
  name: hostel-microservice-service
spec:
  type: ClusterIP
  selector:
    app: hostel-microservice-deployment
  ports:
    - port: 5001
      targetPort: 5001
