kubernetes-config/mysql-hostel.yaml
---
# Hostel Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-hostel
spec:
  selector:
    matchLabels:
      app: mysql-hostel
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql-hostel
    spec:
      containers:
        - name: mysql
          image: mysql:8
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-hostel-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-hostel-storage
          persistentVolumeClaim:
            claimName: mysql-hostel-pvc
---
# Hostel Service
apiVersion: v1
kind: Service
metadata:
  name: mysql-hostel
spec:
  ports:
    - port: 3306
  selector:
    app: mysql-hostel
