kubernetes-config/user-microservice.yaml
---
# User Microservice Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-microservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-microservice-deployment
  template:
    metadata:
      labels:
        app: user-microservice-deployment
    spec:
      containers:
        - name: user-microservice-container
          image: enum3rat3/user-service
          ports:
            - containerPort: 5002
          resources:
            requests:
              cpu: "250m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
---
# User Microservice Service
apiVersion: v1
kind: Service
metadata:
  name: user-microservice-service
spec:
  type: ClusterIP
  selector:
    app: user-microservice-deployment
  ports:
    - port: 5002
      targetPort: 5002
